<resources>
  <string name="account_confirmation_title">Is this correct?</string>
  <string name="activity_drafts_title">Drafts</string>
  <string name="activity_edit_profile_bio_hint">Bio</string>
  <string name="activity_edit_profile_email_hint">Email</string>
  <string name="activity_edit_profile_name_hint">Name</string>
  <string name="activity_edit_profile_username_hint">"@User (unique name)"</string>
  <string name="activity_edit_profile_website_hint">Website</string>
  <string name="activity_edit_stream_title">Edit stream</string>
  <string name="activity_find_contributors_hint">Search</string>
  <string name="activity_find_friends_cant_load_message">Can\'t load data. Check your connection.</string>
  <string name="activity_find_friends_empty_message">No Results</string>
  <string name="activity_find_participants_empty_message">No results</string>
  <string name="activity_find_participants_hint">Search</string>
  <string name="activity_find_streams_hint">Search for streams</string>
  <string name="activity_find_streams_title">Search for streams</string>
  <string name="activity_followers_title">Followers</string>
  <string name="activity_following_title">Following</string>
  <string name="activity_login_email_button">Enter</string>
  <string name="activity_login_email_error_credentials">Id or Password are not valid.</string>
  <string name="activity_login_email_forgot">Forgot Password?</string>
  <string name="activity_login_email_id_hint">Username or Email</string>
  <string name="activity_login_email_password_hint">Password</string>
  <string name="activity_login_register_email">Create Account</string>
  <string name="activity_login_register_facebook">Log in with Facebook</string>
  <string name="activity_login_signin">Sign In</string>
  <string name="activity_new_stream_title">New stream</string>
  <string name="activity_registration_email_hint">Email</string>
  <string name="activity_registration_legal_disclaimer">By signing up you are indicating that you accept the (privacy-policy) and the (terms-of-service).</string>
  <string name="activity_registration_legal_disclaimer_privacy_policy">Privacy Policy</string>
  <string name="activity_registration_legal_disclaimer_terms_of_service">Terms of Service</string>
  <string name="activity_registration_password_hint">Password</string>
  <string name="activity_registration_username_hint">"@User (unique name)"</string>
  <string name="activity_started_following_you">started following you</string>
  <string name="activity_timeline_empty_title">No Activity</string>
  <string name="added_contributor">Added</string>
  <string name="added_to_favorites">Following</string>
  <string name="add_contributor">Add</string>
  <string name="add_contributor_button">Add contributor</string>
  <string name="add_contributor_confirmation_message">Add %s?</string>
  <string name="add_to_favorites_menu_title">Follow</string>
  <string name="admin">"Admin. "</string>
  <string name="alert_report_confirmed_email_message">Go to Account &gt; Edit Profile and confirm your email.</string>
  <string name="alert_report_confirmed_email_ok">OK</string>
  <string name="alert_report_confirmed_email_title">Confirmed Email Required</string>
  <string name="alert_shootr_update">This content can only be viewed with the latest version of Shootr.</string>
  <string name="alert_update_shootr">This content can only be viewed with the latest version of Shootr</string>
  <string name="all_messages_title">ALL</string>
  <string name="all_messages_title_plural">ALL (%d)</string>
  <string name="all_participants_button">All</string>
  <string name="all_push_settings">All</string>
  <string name="back_button_poll">Back</string>
  <string name="block_unblock_user">Unblock</string>
  <string name="block_user_dialog_block">Block</string>
  <string name="block_user_dialog_cancel">Cancel</string>
  <string name="block_user_dialog_message">This user won\'t disturb you or the participants in your streams, and won\'t be able to find your profile or see any of your content.</string>
  <string name="block_user_error">To block this user you need to unfollow first.</string>
  <string name="cancel">Cancel</string>
  <string name="cancel_hide_shot" formatted="false">Cancel</string>
  <string name="change_password_button_text">DONE</string>
  <string name="change_password_logout_message">Password changed. Must sign in again…</string>
  <string name="change_photo">Change photo</string>
  <string name="checkin_push_settings">Check-in</string>
  <string name="check_in_show_case">Check-in to say you\'re here</string>
  <string name="communication_error">There\'s a problem connecting with the internet. Check your connection and try again.</string>
  <string name="connection_lost">The network connection was lost</string>
  <string name="context_menu_mute">Mute notifications</string>
  <string name="context_menu_unmute">Unmute notifications</string>
  <string name="contributors_empty">No contributors</string>
  <string name="copied_to_clipboard">Text copied to clipboard.</string>
  <string name="current_password_hint">Current password</string>
  <string name="days">d</string>
  <plurals name="days_left">
    <item quantity="one">%d day</item>
    <item quantity="other">%d days </item>
  </plurals>
  <string name="delete_shot_confirmation_message">Delete shot?</string>
  <string name="discard">Discard</string>
  <string name="discard_profile_confirmation">Discard changes?</string>
  <string name="dismiss_highlight_shot">Dismiss</string>
  <string name="done">Done</string>
  <string name="done_label">Done</string>
  <string name="done_pin_topic" formatted="false">Pin</string>
  <string name="downloaded_pictures_subfolder">Shootr/</string>
  <string name="download_photo_permission_denied">Permission denied. You need to grant access to save the image.</string>
  <string name="download_photo_permission_explaination">You must give Shootr permission to save images.</string>
  <string name="drafts_action_discard">Discard</string>
  <string name="drafts_action_shoot">Shoot</string>
  <string name="drafts_empty">No Drafts</string>
  <string name="drawer_activity_me" formatted="false">Me</string>
  <string name="drawer_activity_title">Activity</string>
  <string name="drawer_following_activity_title" formatted="false">Following</string>
  <string name="drawer_streams_title">Streams</string>
  <string name="drawer_users_title">Users</string>
  <string name="edit_stream">Edit</string>
  <string name="edit_stream_listing_context_menu">Edit</string>
  <string name="email_already_registered">Email already registered</string>
  <string name="error_massive_register">You have exceeded the number of allowed registrations on this device. Please try again later.</string>
  <string name="email_confirmation_message">Enter a valid email address to help secure your account.</string>
  <string name="email_confirmation_message_content">Click the link in the email we\'ve just sent to %s</string>
  <string name="email_confirmation_ok">OK</string>
  <string name="email_confirmation_title">Confirm Your Email</string>
  <string name="empty_followings">-</string>
  <string name="entered_an_hour_ago">1 hour ago</string>
  <string name="entered_a_day_ago">1 day ago</string>
  <string name="entered_a_minute_ago">1 minute ago</string>
  <string name="entered_days_ago">%d days ago</string>
  <string name="entered_hours_ago">%d hours ago</string>
  <string name="entered_just_now">Now</string>
  <string name="entered_long_time_ago">Many days ago</string>
  <string name="entered_minutes_ago">%d minutes ago</string>
  <string name="error_adding_contributor">You can add up to  100 contributors</string>
  <string name="error_deleted_shot">This shot was deleted</string>
  <string name="error_facebook_login">Couldn\'t log in with Facebook. Try again later.</string>
  <string name="error_following_user_blocked">Cannot follow users you blocked.</string>
  <string name="error_has_voted">You voted already</string>
  <string name="error_image_upload">Error trying to upload image</string>
  <string name="error_login_credentials_invalid">Id or password are not valid</string>
  <string name="error_login_facebook_method">Please, log in with your e-mail and password. You didn\'t sign up with Facebook.</string>
  <string name="error_login_shootr_method">Please, log in with Facebook. You didn\'t sign up with e-mail and password.</string>
  <string name="error_message">Shootr encountered a problem and needs to close</string>
  <string name="error_message_bio_too_long">Bio must not have more than 150 characters</string>
  <string name="error_message_change_password_new_password_and_again_must_match">Passwords don\'t match</string>
  <string name="error_message_change_password_new_password_same_current_password">Your new password must be different</string>
  <string name="error_message_invalid_change_password">Invalid password</string>
  <string name="error_reset_password">We couldn\'t find any matching accounts.</string>
  <string name="error_restart_button">Restart</string>
  <string name="error_title">Ooops!</string>
  <string name="go_to_stream">Enter stream</string>
  <string name="menu_all_shots">Show all shots</string>
  <string name="menu_holding_shots">Show holder\'s shots</string>
  <string name="menu_profile_chage_password">Change password</string>
  <string name="messages">Messages</string>
  <string name="mute">Mute notifications</string>
  <string name="next">Next</string>
  <string name="official_poll_button_text">Go to Notifications</string>
  <string name="official_poll_description">In order to secure one vote per account and device, please activate Shootr push notifications before voting.</string>
  <string name="official_poll_title">Official poll</string>
  <string name="onboarding_continue">Next</string>
  <string name="poll_ignore">Dismiss poll</string>
  <string name="poll_results">View results</string>
  <string name="private_vote">Private Vote</string>
  <string name="profile_logout">Sign out</string>
  <string name="profile_support">Support</string>
  <string name="public_vote">Public Vote</string>
  <string name="remove_stream_label">Remove stream</string>
  <string name="report_context_menu_block">Block</string>
  <string name="report_context_menu_report">Report</string>
  <string name="reset_password_enter_username_email">Enter your Username or Email in Shootr.</string>
  <string name="restore_stream_label">Restore stream</string>
  <string name="share_stream_button">Share now</string>
  <string name="share_stream_description">Surely you have lots of people out there who would like your stream. Share it now through your social media or website, bring in people and start having fun.</string>
  <string name="share_stream_title">Share your stream</string>
  <string name="stream_timeline_add_favorite">Follow</string>
  <string name="stream_timeline_remove_favorite">Unfollow</string>
  <string name="unmute">Unmute notifications</string>
  <string name="whale_message_default">We\'re busy polishing Shootr for you and will be back soon.</string>
  <string name="whale_retry_button_text">OK</string>
  <string name="whale_title_default">We\'ll be back</string>
  <string name="home">Home</string>
  <string name="none_filter">All</string>
  <string name="important_filter">Important</string>
  <string name="nicest_filter">Nicest</string>
  <string name="promoted_shot_first_paragraph">Super Shot is a message that stands out amongst the crowd!</string>
  <string name="promoted_shot_second_paragraph">When you buy a Super Shot, your message stays pinned at the top of the stream. The more you spend, the longer it stays.</string>
  <string name="promoted_shot_third_paragraph">This way, everyone in the stream, including the creator will read your shot. The creator will also earn a share of your Super Shot purchase.</string>
  <string name="promoted_info_title">Super Shots</string>
</resources>