<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".StreamTimelineFragment">

    <item
      android:id="@+id/menu_showing_holding_shots"
      android:icon="@drawable/ic_no_filter"
      android:title="@string/menu_holding_shots"
      android:visible="false"
      app:showAsAction="always" />

    <item
      android:id="@+id/menu_showing_all_shots"
      android:icon="@drawable/filter_activated"
      android:title="@string/menu_all_shots"
      android:visible="false"
      app:showAsAction="always" />

    <item
      android:id="@+id/menu_stream_add_favorite"
      android:orderInCategory="100"
      android:title="@string/stream_timeline_add_favorite"
      android:visible="false"
      app:showAsAction="always" />

    <item
      android:id="@+id/menu_stream_remove_favorite"
      android:orderInCategory="100"
      android:title="@string/stream_timeline_remove_favorite"
      android:visible="false"
      app:showAsAction="always" />

    <item
      android:id="@+id/menu_mute_stream"
      android:orderInCategory="100"
      android:title="@string/mute"
      android:visible="false"
      app:showAsAction="always" />

    <item
      android:id="@+id/menu_unmute_stream"
      android:orderInCategory="100"
      android:title="@string/unmute"
      android:visible="false"
      app:showAsAction="always" />

</menu>