<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".ProfileFragment">
    <item
      android:id="@+id/menu_profile_change_password"
      android:orderInCategory="100"
      android:title="@string/menu_profile_chage_password"
      android:visible="false"
      app:showAsAction="never" />

    <item
      android:id="@+id/menu_profile_support"
      android:orderInCategory="100"
      android:title="@string/profile_support"
      android:visible="false"
      app:showAsAction="never" />

    <item
      android:id="@+id/menu_profile_logout"
      android:orderInCategory="100"
      android:title="@string/profile_logout"
      android:visible="false"
      app:showAsAction="never" />

    <item
      android:id="@+id/menu_profile_report_user"
      android:orderInCategory="100"
      android:title="@string/report_context_menu_report"
      android:visible="false"
      app:showAsAction="never" />

    <item
      android:id="@+id/menu_profile_block_user"
      android:orderInCategory="100"
      android:title="@string/report_context_menu_block"
      android:visible="false"
      app:showAsAction="never" />

</menu>