<?xml version="1.0" encoding="utf-8"?>
<tabs>

  <tab
      id="@+id/bottombar_activity"
      icon="@drawable/ic_home"
      title="@string/home"
      activeColor="@color/material_black"
      inActiveColor="@color/inactive_tabs"
      barColorWhenSelected="@color/primary"
      badgeBackgroundColor="@color/favorite"/>

  <tab
     id="@+id/bottombar_streams"
     icon="@drawable/ic_streams_selected"
     title="@string/drawer_streams_title"
     activeColor="@color/material_black"
      inActiveColor="@color/inactive_tabs"
     barColorWhenSelected="@color/primary"/>

  <tab
      id="@+id/bottombar_messages"
      icon="@drawable/ic_messages_selected"
      title="@string/messages"
      activeColor="@color/material_black"
      inActiveColor="@color/inactive_tabs"
      barColorWhenSelected="@color/primary"
      badgeBackgroundColor="@color/favorite"
      />
</tabs>