<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
      android:id="@+id/stream_detail_menu_edit"
      android:title="@string/edit_stream"
      android:icon="@drawable/ic_action_edit"
      android:visible="false"
      app:showAsAction="ifRoom" />

    <item
      android:id="@+id/stream_detail_menu_data_info"
      android:title="@string/stream_detail_menu_data_info"
      android:visible="false"
      app:showAsAction="never" />
    <item
      android:id="@+id/stream_detail_menu_remove"
      android:title="@string/remove_stream_label"
      android:visible="false"
      app:showAsAction="never" />
    <item
      android:id="@+id/stream_detail_menu_restore"
      android:title="@string/restore_stream_label"
      android:visible="false"
      app:showAsAction="never" />
</menu>