<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
  tools:context=".StreamTimelineFragment">

    <item
        android:id="@+id/menu_show_video"
        android:icon="@drawable/ic_media"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_hide_video"
        android:icon="@drawable/ic_media_off"
        android:visible="false"
        app:showAsAction="always" />

  <item android:id="@+id/menu_filter_shots"
      android:title="Action"
      app:showAsAction="ifRoom"
      android:visible="true"
      android:icon="@drawable/ic_filter_list">
  </item>


    <item
      android:id="@+id/menu_stream_add_favorite"
      android:orderInCategory="100"
      android:title="@string/stream_timeline_add_favorite"
      android:visible="false"
      app:showAsAction="always" />

    <item
      android:id="@+id/menu_stream_remove_favorite"
      android:orderInCategory="100"
      android:title="@string/stream_timeline_remove_favorite"
      android:visible="false"
      app:showAsAction="always" />

    <item
      android:id="@+id/menu_mute_stream"
      android:orderInCategory="100"
      android:title="@string/mute"
      android:visible="false"
      app:showAsAction="always" />

    <item
      android:id="@+id/menu_unmute_stream"
      android:orderInCategory="100"
      android:title="@string/unmute"
      android:visible="false"
      app:showAsAction="always" />

</menu>