<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/reset_password_section_input"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:animateLayoutChanges="true"
  android:orientation="vertical"
  android:padding="16dp">

    <TextView android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/reset_password_enter_username_email"
      android:textColor="@color/material_black"
      android:textSize="15sp" />

    <com.shootr.mobile.ui.widgets.FloatLabelLayout android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:floatLabelTextAppearance="@style/TextAppearance.FloatLabel">

        <EditText android:id="@+id/reset_password_username_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/activity_login_email_id_hint"
          android:imeOptions="actionNext"
          android:inputType="textEmailAddress|textNoSuggestions"
          tools:ignore="TextFields">

            <requestFocus />
        </EditText>

    </com.shootr.mobile.ui.widgets.FloatLabelLayout>

    <TextView android:id="@+id/reset_password_error_message"
      style="@style/ErrorSubtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/error_reset_password"
      android:visibility="gone"
      tools:visibility="visible" />

    <TextView android:id="@+id/reset_password_next"
      style="@style/BorderlessButton.Primary"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="right"
      android:background="?selectableItemBackgroundBorderless"
      android:text="@string/next"
      android:textSize="15sp" />

    <ProgressBar android:id="@+id/reset_password_progress"
      style="@style/Widget.AppCompat.ProgressBar.Horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:indeterminate="true"
      android:visibility="gone"
      tools:visibility="visible" />
</LinearLayout>