<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:gravity="center"
      android:orientation="vertical"
      android:paddingBottom="84dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp">

        <ImageView android:layout_width="@dimen/logo_size_104"
          android:layout_height="@dimen/logo_size_104"
          android:src="@drawable/logo_orange_104" />

        <TextView android:id="@+id/error_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp"
          android:layout_marginTop="32dp"
          android:fontFamily="sans-serif-light"
          android:gravity="center"
          android:text="@string/error_title"
          android:textColor="@color/gray_10"
          android:textSize="27sp" />

        <TextView android:id="@+id/error_message"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="top|center_horizontal"
          android:maxWidth="360dp"
          android:text="@string/error_message"
          android:textSize="18sp" />

        <Button android:id="@+id/error_restart"
          android:layout_width="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_height="wrap_content"
          android:text="@string/error_restart_button"
          android:textColor="@color/white" />

    </LinearLayout>
</FrameLayout>
