<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

  <RelativeLayout
      android:id="@+id/header_container"
      android:layout_width="match_parent"
      android:layout_height="56dp"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      app:layout_constraintTop_toTopOf="parent"
      >


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/promoted_info_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        />

  </RelativeLayout>

  <View
      android:id="@+id/separator"
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/separator"
      app:layout_constraintTop_toBottomOf="@+id/header_container"
      />

  <TextView
      android:id="@+id/promoted_shot_first_paragraph"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:fontFamily="sans-serif"
      android:padding="16dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:text="@string/promoted_shot_first_paragraph"
      android:textColor="@color/black"
      android:textSize="16sp"
      app:layout_constraintTop_toBottomOf="@+id/separator"
      />

  <ImageView
      android:id="@+id/info_image"
      android:layout_width="match_parent"
      android:layout_height="64dp"
      android:layout_marginTop="20dp"
      android:src="@drawable/info_image"
      app:layout_constraintTop_toBottomOf="@+id/promoted_shot_first_paragraph"
      />

  <TextView
      android:id="@+id/promoted_shot_second_paragraph"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_marginTop="20dp"
      android:fontFamily="sans-serif"
      android:padding="16dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:text="@string/promoted_shot_second_paragraph"
      android:textColor="@color/black"
      android:textSize="16sp"
      app:layout_constraintTop_toBottomOf="@+id/info_image"
      />

  <TextView
      android:id="@+id/promoted_shot_third_paragraph"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:fontFamily="sans-serif"
      android:padding="16dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:text="@string/promoted_shot_third_paragraph"
      android:textColor="@color/black"
      android:textSize="16sp"
      app:layout_constraintTop_toBottomOf="@+id/promoted_shot_second_paragraph"
      />

  <Button
      android:id="@+id/skip"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@drawable/continue_button"
      android:gravity="center"
      android:paddingLeft="30dp"
      android:paddingRight="30dp"
      android:text="@string/onboarding_continue"
      android:textColor="@color/white"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/promoted_shot_third_paragraph"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintVertical_bias="0.9"
      />


</android.support.constraint.ConstraintLayout>