<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_width="200dp"
    android:background="@color/white"
    android:translationZ="8dp"
    android:paddingLeft="8dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        >

      <TextView
          android:id="@+id/none_filter"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/none_filter"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="normal"
          android:fontFamily="sans-serif"
          android:layout_weight="8"
          />

      <ImageView
          android:id="@+id/none_filter_selected"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_action_done_enabled"
          android:tint="@color/accent"
          />


    </LinearLayout>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:padding="8dp"
      android:gravity="center_vertical"
      >
    <TextView
        android:id="@+id/important_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/important_filter"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:layout_weight="8"

        />

    <ImageView
        android:id="@+id/important_filter_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_done_enabled"
        android:tint="@color/accent"
        android:visibility="visible"
        />


  </LinearLayout>



  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:padding="8dp"
      android:gravity="center_vertical"
      >
    <TextView
        android:id="@+id/nicest_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/nicest_filter"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:layout_weight="8"
        />


    <ImageView
        android:id="@+id/nicest_filter_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_done_enabled"
        android:visibility="visible"
        android:tint="@color/accent"
        />
  </LinearLayout>
  </LinearLayout>
